# pytijo_cli

./: .gitlab-ci.yml  Makefile  README.md  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py
pytijo_cli/: adm.py  cli.py  common_options.py  push.py
tests/: cli.output.1  cli.parsed.1  cli.template.1  test_cli_core.py
tijocli/: cli.py
