[metadata]
name = pytijo_cli
summary = Tijo Command line interface
description-file = README.md
author = Jon Castro
author-email = jon@tijo.io
home-page = http://tijo.io
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    pytijo_cli

extra_files =
    setup.py
    README.md
    pytijo_cli

[global]

[entry-points]
console_scripts =
    tijo = pytijo_cli.cli:main
    tijo-adm = pytijo_cli.adm:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
